<resources>
    <string name="app_name">Prayas</string>
    <string name="email_address">Email Address</string>
    <string name="static_text">The secret of your future is hidden in your prayas.</string>
    <string name="app_name_spaced">p r a y a s</string>
    <string name="create_account">Create Account</string>
    <string name="c_password_hint">Confirm Password</string>
    <string name="sign_up">Signup</string>
    <string name="create_auth">By clicking Create Account, you agree to our Terms and confirm that you have read our Data Policy, including our Cookie Use Policy. You may receive SMS message notifications from Routino and can opt out at any time.</string>
    <string name="title_activity_console">Console</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="contributer">Contributor</string>
    <string name="title_per">Performance</string>
</resources>
